[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.3"
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.189", features = ["rc"] }
serde_derive = "1.0.189"
serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["json"] }
chrono = { version = "0.4.31", features = ["serde"] }
lazy_static = { version = "1.4.0" }
futures = "0.3.28"
base64 = "0.21.4"

[env]
OPENSSL_DIR = "/usr/include/"