[package]
name = "adamfortunecom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
pulldown-cmark = "0.9"
axum = "0.7"
tokio = { version = "1.33", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono", "macros"] }
http = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures = "0.3"
toy-json-formatter = { version = "0.2", features = ["serde"] }

[env]
OPENSSL_DIR = "/usr/include/"
